test/frontend/pass/loops.osl
shader foo() {
    while (false) {
        continue;
    }
    while (true) {
        break;
    }
    for (int i = 0, j = 1; i < 3 && j < 4; ++i, --j);
}
