test/frontend/fail/shader_redefinition.osl
shader foo() {
}
shader foo(int i = 3) {
}
